--- a/arbol_decisiones.html
+++ b/arbol_decisiones.html
@@ -546,3 +546,72 @@
             }
         }
     </style>
+
+   <div class="container">
+        <div class="header">
+            <h1>Selecciona tu Servicio Ideal</h1>
+            <p>Completa nuestro sencillo formulario en 4 pasos y encuentra la mejor oferta para tus necesidades</p>
+        </div>
+        
+        <div id="multi-step-form-section" class="custom-multi-step-container">
+            <div class="steps-navigation">
+                <div class="step-tab active" data-step="1">
+                    <i class="fas fa-bolt"></i>
+                    <span>Servicio</span>
+                </div>
+                <div class="step-tab" data-step="2">
+                    <i class="fas fa-building"></i>
+                    <span>Compañía</span>
+                </div>
+                <div class="step-tab" data-step="3">
+                    <i class="fas fa-tags"></i>
+                    <span>Oferta</span>
+                </div>
+                <div class="step-tab" data-step="4">
+                    <i class="fas fa-user"></i>
+                    <span>Datos</span>
+                </div>
+            </div>
+
+            <div class="step-content-container">
+                <!-- Paso 1: Selección de Servicio -->
+                <div id="step-1" class="step active">
+                    <h2>Selecciona un servicio</h2>
+                    <div class="selection-grid">
+                        <div class="selection-card" data-service="energia">
+                            <div class="service-icon">
+                                <i class="fas fa-bolt"></i>
+                            </div>
+                            <h3>Energía</h3>
+                            <p>Soluciones eléctricas y de gas para tu hogar o negocio</p>
+                        </div>
+                        <div class="selection-card" data-service="telefonia">
+                            <div class="service-icon">
+                                <i class="fas fa-phone-alt"></i>
+                            </div>
+                            <h3>Telefonía</h3>
+                            <p>Líneas fijas, móviles y paquetes de internet</p>
+                        </div>
+                        <div class="selection-card" data-service="alarmas">
+                            <div class="service-icon">
+                                <i class="fas fa-shield-alt"></i>
+                            </div>
+                            <h3>Alarmas</h3>
+                            <p>Sistemas de seguridad para proteger lo que más quieres</p>
+                        </div>
+                        <div class="selection-card" data-service="seguros">
+                            <div class="service-icon">
+                                <i class="fas fa-umbrella"></i>
+                            </div>
+                            <h3>Seguros</h3>
+                            <p>Coberturas para hogar, salud, vida y vehículos</p>
+                        </div>
+                    </div>
+                    <div class="selection-message" id="service-message">Por favor, selecciona un servicio</div>
+                    <div class="navigation-buttons">
+                        <div></div>
+                        <button class="nav-button next-button" data-next-step="2">
+                            Siguiente <i class="fas fa-arrow-right"></i>
+                        </button>
+                    </div>
+                </div>
