--- a/arbol_decisiones.html
+++ b/arbol_decisiones.html
@@ -745,8 +745,8 @@
                 // Energía
                 'Iberdrola': 'https.................................. ',
                 'Repsol': 'http..................................',
-                'Endesa': 'https:...................................png',
-                'Naturgy': 'https:/...................................png',
+                'Endesa': 'https:...................................',
+                'Naturgy': 'https:/...................................',
                 'Plenitude': 'ht..................................',
                 
                 // Telefonía
